Fix content overflow in the CSS stylings

--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -1,21 +1,21 @@
 * {
-    overflow: hidden;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
 }
 
 html {
-    height: calc(100% - 10px);
-    width: calc(100% - 10px);
-    margin: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 body {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
     display: flex;
-    flex-flow: column;
-    height: 100%;
-    width: 100%;
+    flex-direction: column;
+    padding: 5px;
+    overflow: hidden;
 }
 
 #status_msg, #dashboard_tab, #statistics_tab, #signin_tab, #signup_tab {
@@ -38,6 +38,7 @@ body {
 }
 
 #tab_content {
-    flex-shrink: 0;
+    min-height: 0px;
+    flex-shrink: 1;
     flex-grow: 1;
 }
